--- a/package.json
+++ b/package.json
@@ -12,14 +12,8 @@
   },
   "dependencies": {
     "@rollup/plugin-replace": "^3.0.0",
-    "@types/chrome": "^0.0.127",
-    "@types/firefox-webext-browser": "^82.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "circular": "^1.0.5",
     "d3-hierarchy": "^3.1.2",
-    "flatted": "^3.2.7",
-    "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reactflow": "^11.7.4",
@@ -31,13 +25,15 @@
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@rollup/plugin-typescript": "^8.1.0",
     "@types/jest": "^26.0.19",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.16.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint": "^8.46.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.1",
     "jest": "^26.6.3",
     "jest-chrome": "^0.7.0",
+    "prettier": "3.0.1",
     "rollup": "^2.56.3",
     "rollup-plugin-chrome-extension": "^3.6.1",
     "rollup-plugin-empty-dir": "^1.0.5",
@@ -45,6 +41,10 @@
     "rollup-plugin-zip": "^1.0.3",
     "ts-jest": "^26.4.4",
     "tslib": "^2.0.3",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "@types/chrome": "^0.0.127",
+    "@types/firefox-webext-browser": "^82.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0"
   }
 }
